components/counter/src/styles/style.scss
// Copyright (c) Alaska Air. All right reserved. Licensed under the Apache-2.0 license.
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

// layout styles - define any layout specifications for UI that is contained WITHIN the component
// never define layout that would cause effect on element outside the scope of this component

// Support for fallback values
@import "@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';

.counter {
  display: flex;
  align-items: center;
  justify-content: space-between;
  column-gap: var(--ds-size-150, $ds-size-150);
}

.content {
  display: flex;
  flex-flow: column;  
}

[name="description"] {
  &::slotted(*) {
    display: block;
    font-size: var(--ds-text-body-size-xs, $ds-text-body-size-xs);
    line-height: var(--ds-size-200, $ds-size-200);
  }
}

.quantityWrapper {
  width: var(--ds-size-400, $ds-size-400);
  height: calc(var(--ds-size-25, $ds-size-25) + var(--ds-size-400, $ds-size-400));
  align-content: center;
  cursor: default;
  font-size: var(--ds-size-250, $ds-size-250);
  text-align: center;
}

:host{
  position: relative;

  &::part(counterControl) {
    display: flex;
    border-radius: var(--ds-size-500, $ds-size-500);
    line-height: 0;

    &:focus-visible {
      outline-offset: 0;
      outline-style: solid;
      outline-width: var(--ds-size-25, $ds-size-25);
    }
  }

  &::part(controlMinus) {
    --ds-auro-counter-control-border-radius: var(--ds-size-500, #{$ds-size-500}) 0 0 var(--ds-size-500, #{$ds-size-500});
    --ds-auro-counter-control-padding: var(--ds-size-50, #{$ds-size-50}) var(--ds-size-50, #{$ds-size-50}) var(--ds-size-50, #{$ds-size-50}) var(--ds-size-100, #{$ds-size-100});
  }

  &::part(controlPlus) {
    --ds-auro-counter-control-border-radius: 0 var(--ds-size-500, #{$ds-size-500}) var(--ds-size-500, #{$ds-size-500}) 0;
    --ds-auro-counter-control-padding: var(--ds-size-50, #{$ds-size-50}) var(--ds-size-100, #{$ds-size-100}) var(--ds-size-50, #{$ds-size-50}) var(--ds-size-50, #{$ds-size-50});
  }
}

auro-counter-button {
  display: flex;
}

